[tool.poetry]
authors = ["chain-dev-team <chain-dev@crypto.com>"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
description = "Tools for Crypto.org Chain wallet management and offline transaction signing"
exclude = ["generate_protos.sh"]
keywords = ["CRO", "blockchain", "signature", "crypto.com"]
license = "Apache-2.0"
name = "chainlibpy"
readme = "README.md"
repository = "https://github.com/crypto-org-chain/chainlibpy"
version = "2.2.0"

[tool.poetry.dependencies]
bech32 = "~=1.1.0"
ecdsa = ">=0.14.0, <0.17.0"
grpcio = "^1.42.0"
grpcio-tools = "^1.42.0"
hdwallets = "~=0.1.0"
mnemonic = ">=0.19, <0.20"
python = ">=3.8, <4.0"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
docformatter = "^1.4"
flake8 = "^4.0.1"
grpc-stubs = "^1.24.7"
hypothesis = "^6.35.1"
isort = "^5.10.1"
mdformat = "^0.7.10"
mdformat-black = "^0.1.1"
mdformat-toc = "^0.3.0"
mypy = "^0.931"
pre-commit = "^2.17.0"
pystarport = "^0.2.3"
pytest = "^6.2.5"
pytest-env = "^0.6.2"
requests = "^2.27.1"
toml = "^0.10.2"
tox = "^3.24.4"
types-PyYAML = "^6.0.4"
types-protobuf = "^3.19.8"
types-requests = "^2.27.8"
types-toml = "^0.10.3"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.hypothesis
    | _build
    | buck-out
    | build
    | dist
  )/
  | ^chainlibpy/generated/
)
'''
include = '\.pyi?$'
line-length = 99
target-version = ['py39']

[tool.isort]
extend_skip_glob = ["*/generated/*"]
profile = "black"

[tool.pytest.ini_options]
env = [
  # To avoid "Error: Cannot open an HTTP server: socket.error reported AF_UNIX path too long"
  # PYTEST_DEBUG_TEMPROOT is used by pytest default tmp_path_factory fixture
  "PYTEST_DEBUG_TEMPROOT = /tmp",
]
