[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE

[flake8]
max-line-length = 99
max-complexity = 10
; exclude = .tox,*.egg,build,*.yaml,*.yml
# These checks violate PEP8 so let's ignore them
extend-ignore =
    E203
extend-exclude =
    */site-packages/*,
    */generated/*,
    tests,
    example
exclude =
    __pycache__,
    .git,
    .tox,
    *.egg,
    build,
    *.yaml,
    *.yml
